# GoySDK

./: .gitignore  README.md
GoyLoader/: .gitignore  App.xaml  App.xaml.cs  GoyLoader.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
GoyLoader/Controls/: GoyMark.xaml  GoyMark.xaml.cs
GoyLoader/Native/: NativeMethods.cs
GoyLoader/Resources/: PLACE_PAYLOAD_HERE.txt
GoyLoader/Services/: AuthenticodeVerifier.cs  DependencyChecker.cs  DependencySetupService.cs  DllInjector.cs  FileDownloader.cs  LoaderSessionLog.cs  PayloadDiagnostics.cs  PayloadExtractor.cs  ProcessFinder.cs
GoyLoader/Themes/: LoaderIcons.xaml  PremiumPalette.xaml
GoyLoader/scripts/: Find-Offsets.ps1  Package-Payload.ps1
fixes/: INDEX.md
fixes/P0_critical/: 01_deflate_silent_stub.md  02_is_initialized_lies.md  03_path_traversal_admin_rce.md  04_unverified_installer_execution.md  05_action_mask_after_sampling.md  06_action_table_duplication.md
fixes/P1_high/: 01_padstates_data_race.md  02_kickoff_timer_multislot.md  03_gameevent_use_after_free.md  04_dead_join_press_countdown.md  05_dead_auto_requeue_chat.md  06_zip_integer_overflow.md  07_overlay_atomic_state.md
fixes/P2_medium/: 01_humanizer_deadzone_clobbers_policy.md  02_humanizer_state_leak_on_swap.md  03_x64_hmodule_truncation.md  04_enum_modules_null_arg.md  05_filedownloader_retry_useless.md
fixes/P3_low/: 01_was_active_unused.md  02_dead_for_loop_overlay.md  03_dllmain_member_function_cast.md  04_boost_diag_first_car_only.md  05_xor_obfuscation_theatre.md  06_nullcheck_macro_safety.md  07_typo_initalized.md  08_license_bootstrap.md  09_duplicate_iostream_pch.md  11_cmake_glob_recurse.md  (+3 more)
internal_bot/: BUILD.bat  CMakeLists.txt  LICENSE  Loader.cpp  OverlayRenderer.cpp  OverlayRenderer.hpp  README.md  dllmain.cpp  pch.hpp  rebuild.bat  resource.h  resources.rc  tntsTemplate.sln
internal_bot/Components/: Component.cpp  Component.hpp  Includes.hpp
internal_bot/Components/Components/: Console.cpp  Console.hpp  Core.cpp  Core.hpp  Events.cpp  Events.hpp  GUI.cpp  GUI.hpp  GameState.cpp  GameState.hpp  Instances.cpp  Instances.hpp  Main.cpp  Main.hpp  Manager.cpp  Manager.hpp
internal_bot/Extensions/: Includes.hpp
internal_bot/Extensions/Extensions/: Colors.cpp  Colors.hpp  Formatting.cpp  Formatting.hpp  Math.cpp  Math.hpp  Memory.cpp  Memory.hpp  UnrealMemory.hpp
internal_bot/GoySDK/: ActionMask.hpp  BotModule.cpp  BotModule.hpp  Config.hpp  GameState.hpp  Humanizer.hpp  ObsBuilder.cpp  ObsBuilder.hpp  UEHookStrings.hpp  ViGemController.cpp  ViGemController.hpp
internal_bot/ImGui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_widgets.cpp
internal_bot/ImGui/Kiero/: kiero.cpp
internal_bot/Modules/: Includes.hpp  Module.cpp  Module.hpp
internal_bot/Modules/Mods/: Drawing.cpp  Drawing.hpp
internal_bot/RLSDK/: GameDefines.cpp  GameDefines.hpp  SdkHeaders.hpp
internal_bot/RLSDK/SDK_HEADERS/: AkAudio_classes.cpp  AkAudio_classes.hpp  AkAudio_parameters.hpp  AkAudio_structs.hpp  Core_classes.cpp  Core_classes.hpp  Core_parameters.hpp  Core_structs.hpp  Engine_classes.hpp  Engine_parameters.hpp  Engine_structs.hpp  Extras.cpp  Extras.hpp  GFxUI_classes.cpp  GFxUI_classes.hpp  GFxUI_parameters.hpp  GFxUI_structs.hpp  IpDrv_classes.cpp  IpDrv_classes.hpp  IpDrv_parameters.hpp  IpDrv_structs.hpp  OnlineSubsystemEOS_classes.cpp  OnlineSubsystemEOS_classes.hpp  OnlineSubsystemEOS_parameters.hpp  OnlineSubsystemEOS_structs.hpp  OnlineSubsystemSteamworks_classes.cpp  OnlineSubsystemSteamworks_classes.hpp  OnlineSubsystemSteamworks_parameters.hpp  OnlineSubsystemSteamworks_structs.hpp  ProjectX_classes.cpp  ProjectX_classes.hpp  ProjectX_parameters.hpp  ProjectX_structs.hpp  TAGame_structs.hpp  WinDrv_classes.cpp  WinDrv_classes.hpp  WinDrv_parameters.hpp  WinDrv_structs.hpp  XAudio2_classes.cpp  XAudio2_classes.hpp  (+2 more)
internal_bot/docs/superpowers/plans/: 2026-04-11-gui-redesign.md
internal_bot/docs/superpowers/specs/: 2026-04-11-gui-redesign-design.md
repos/RLInference/: CMakeLists.txt
repos/RLInference/include/: ActionOutput.hpp  RLInference.hpp
repos/RLInference/src/: Bot.cpp
repos/RLInference/src/internal/: Common.cpp
